--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "axllent/jquery": "^3.7",
         "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.9",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "vildanbina/livewire-wizard": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
