--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         "php": "^8.1",
         "axllent/jquery": "^3.7",
         "barryvdh/laravel-dompdf": "^2.0",
+        "geekcom/validator-docs": "^3.9",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.9",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravellegends/pt-br-validator": "^10.0",
         "vildanbina/livewire-wizard": "^1.2"
     },
     "require-dev": {
