--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.2",
-        "jquery": "^3.7.0"
+        "jquery": "^3.7.0",
+        "react-google-charts": "^4.0.1"
     }
 }
